# cpp-commons

./: CMakeLists.txt  README.md  config.h.in
include/: language.h  math.h  text_file_reading.h
include/commons/: data_layouts.hpp  math.h
src/: text_file_reading.cpp
test/: language_test.cpp  math_test.cpp  text_file_reading_test.cpp
test/res/: test.txt
